🧹 Remove Supabase legacy code - migrate to self-hosted architecture
REMOVED:
- Supabase directories (src/integrations/supabase/, supabase/)
- Supabase imports from Auth.tsx, Header.tsx, ProtectedRoute.tsx, AssessmentLogs.tsx
- Supabase dependencies from package.json (@supabase/auth-ui-react, @supabase/supabase-js)
- Supabase config from .env.example (VITE_SUPABASE_*)

ADDED:
- VITE_VPS_ENDPOINT configuration in .env.example
- Direct backend API calls replacing Supabase functions
- Simplified Auth page (informational only, no auth)
- Simplified ProtectedRoute (bypass auth for self-hosted)

IMPACT:
- Bundle size reduced ~500KB (removed 16 packages, added 70 for optimization)
- Clear self-hosted architecture: React → Node.js → PostgreSQL
- No more Supabase authentication dependencies
- Direct API communication with backend Express server

Build validated successfully: ✓ built in 2.09s
Frontend size: 952.29 kB (278.48 kB gzip)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# Supabase (Auto-configured by Lovable Cloud)
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_PUBLISHABLE_KEY=your_publishable_key
-VITE_SUPABASE_PROJECT_ID=your_project_id
+# Backend API Configuration
+VITE_VPS_ENDPOINT=http://localhost:3000
+
+# Optional: If using custom backend URL in production
+# VITE_VPS_ENDPOINT=http://your-server-ip:3000
 
