⚙️ Simplify environment configuration - remove root .env files
REMOVED:
- .env (had old Supabase config + VPS endpoint)
- .env.example (unnecessary in root)
- .env.local.example (unnecessary)

ADDED:
- vps-deploy/README.md (clear deployment instructions)
- vps-deploy/frontend/.env.production (VITE_VPS_ENDPOINT=/api for nginx proxy)
- nginx reverse proxy configuration for /api endpoint

MODIFIED:
- README.md: Simplified deployment section (only vps-deploy/.env needed)
- vps-deploy/frontend/Dockerfile: Copy .env.production before build
- vps-deploy/frontend/nginx.conf: Added /api proxy to backend:3000
- .gitignore: Clarified only vps-deploy/.env contains secrets

ARCHITECTURE CLARIFICATION:
✅ Frontend: Compiled with /api endpoint (nginx proxy) - NO .env needed
✅ Backend: Only needs OPENAI_API_KEY in vps-deploy/.env
✅ Deployment: Single docker compose up -d in vps-deploy/

RESULT:
- Zero confusion: Only ONE .env file to configure (vps-deploy/.env)
- Clear separation: Frontend build-time config vs backend runtime config
- Production ready: nginx reverse proxy handles routing

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ dist-ssr
 # Large assessment files
 *.json
 
-# Environment files
+# Environment files (ONLY vps-deploy/.env contains secrets)
 .env
+.env.local
 vps-deploy/.env
