📁 Move .env.production to root for clarity
MOVED:
- vps-deploy/frontend/.env.production → .env.production (root)

REASON:
- Dockerfile copies from project root anyway (COPY . .)
- Vite automatically detects .env.production in root
- Clearer: Build-time config in root, runtime secrets in vps-deploy/

UPDATED:
- vps-deploy/frontend/Dockerfile: Removed manual COPY .env.production
- vps-deploy/README.md: Updated directory structure documentation

RESULT:
✅ .env.production in root (build-time, not secret, just VITE_VPS_ENDPOINT=/api)
✅ vps-deploy/.env for runtime secrets (OPENAI_API_KEY)
✅ Simpler Dockerfile (Vite handles .env.production automatically)

--- a/vps-deploy/frontend/Dockerfile
+++ b/vps-deploy/frontend/Dockerfile
@@ -7,9 +7,7 @@ RUN npm install
 
 COPY . .
 
-# Copy production environment variables
-COPY .env.production .env
-
+# Vite automatically uses .env.production in production builds
 RUN npm run build
 
 FROM nginx:alpine
