fix: Remove duplicate /api path in production endpoint
- Changed VITE_VPS_ENDPOINT from '/api' to empty string
- Nginx already routes /api/* to backend
- Fixes 404 errors on /api/api/assessments

--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,5 @@
 # These are compiled into the build at build time
 
 # Backend API endpoint - uses nginx reverse proxy
-VITE_VPS_ENDPOINT=/api
+# Empty string because nginx already routes /api/* to backend
+VITE_VPS_ENDPOINT=
