--- a/vps-deploy/frontend/nginx.conf
+++ b/vps-deploy/frontend/nginx.conf
@@ -9,8 +9,8 @@ server {
     }
 
     # Reverse proxy to backend API
-    location /api {
-        proxy_pass http://backend:3000/api;
+    location /api/ {
+        proxy_pass http://backend:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
