--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,10 @@ dist-ssr
 .qoder/rules/byterover-rules.md
 .augment/rules/byterover-rules.md
 # Large assessment files
-*.json
+# Large assessment files
+# *.json (Commented out to allow package.json etc)
 
 # Environment files (ONLY vps-deploy/.env contains secrets)
-.env
-.env.local
+
 vps-deploy/.env
+.env
