--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
         "dev": "node --watch server.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
+        "adm-zip": "^0.5.10",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "pg": "^8.11.3",
+        "express": "^4.18.2",
+        "express-session": "^1.18.2",
+        "multer": "^1.4.5-lts.1",
         "node-fetch": "^3.3.2",
-        "adm-zip": "^0.5.10",
-        "multer": "^1.4.5-lts.1"
+        "passport": "^0.7.0",
+        "passport-oauth2": "^1.8.0",
+        "pg": "^8.11.3"
     }
 }
