--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       # Mount init.sql from local file system to initialize DB schema
-      - ./server/init.sql:/docker-entrypoint-initdb.d/init.sql
+      # - ./server/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -19,8 +19,8 @@ services:
 
   # Application Service (Frontend + Backend)
   app:
-    # image: ghcr.io/gilberth/ad-insight-360:latest
-    build: .
+    image: ghcr.io/gilberth/ad-insight-360:latest
+    # build: .
     restart: always
     ports:
       - "${PORT:-3000}:3000"
