chore: Rebrand to OpsIdentity - Updated UI, Branding, and Docker config

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ad-insight-360-client",
+  "name": "ops-identity-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
