--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "node server.js",
-        "dev": "node --watch server.js"
+        "start": "bun server.js",
+        "dev": "bun --watch server.js"
     },
     "dependencies": {
         "adm-zip": "^0.5.10",
